<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:cardCornerRadius="15dp"
      app:cardElevation="10dp"
      app:layout_constraintBottom_toTopOf="@+id/guideline3"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      app:layout_constraintTop_toTopOf="@+id/guideline4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/textView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="16dp"
          android:fontFamily="@font/roboto_bold"
          android:text="@string/welcome"
          android:textAlignment="center"
          android:textColor="@color/colorAccent"
          android:textSize="@dimen/title_cardview_main"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="8dp"
          android:gravity="center"
          android:text="@string/country_field"
          android:textAlignment="center"
          android:textColor="@color/colorAccent"
          android:textSize="@dimen/textfields_main"
          app:layout_constraintBottom_toTopOf="@+id/autoCompleteTextView"
          app:layout_constraintEnd_toEndOf="@+id/textView"
          app:layout_constraintStart_toStartOf="@+id/textView"
          app:layout_constraintTop_toBottomOf="@+id/textView" />

      <AutoCompleteTextView
          android:id="@+id/autoCompleteTextView"
          android:layout_width="0dp"
          android:layout_height="@dimen/inputs_height"
          android:layout_marginBottom="32dp"
          android:background="@drawable/inputbackground"
          android:hint="@string/start_typing_here"
          android:inputType="text"
          android:padding="15dp"
          android:textColor="#FFFFFF"
          android:textColorHint="#ffffff"
          android:textCursorDrawable="@null"
          android:textSize="@dimen/textinputs"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="@+id/textView2"
          app:layout_constraintStart_toStartOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.9" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.1" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.55" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.15" />

  <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:id="@+id/coordinatorLayoutSheet"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="-16dp"
      android:elevation="11dp"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="11dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/sheet_pull" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingStart="42dp"
              android:paddingEnd="42dp"
              android:paddingBottom="32dp">

            <TextView
                android:id="@+id/textViewCountryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="@dimen/title_sheet" />

            <ImageView
                android:id="@+id/imageViewCountryFlag"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp" />

            <LinearLayout
                style="@style/sheet_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

              <TextView
                  style="@style/sheet_text_left"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/number_of_cases" />

              <TextView
                  android:id="@+id/textViewCases"
                  style="@style/sheet_text_right"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="TextView"
                  android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                style="@style/sheet_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

              <TextView
                  style="@style/sheet_text_left"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/cases_today" />

              <TextView
                  android:id="@+id/textViewCasesToday"
                  style="@style/sheet_text_right"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="TextView"
                  android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                style="@style/sheet_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

              <TextView
                  style="@style/sheet_text_left"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/overall_deaths" />

              <TextView
                  android:id="@+id/textViewOverallDeaths"
                  style="@style/sheet_text_right"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="TextView"
                  android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                style="@style/sheet_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

              <TextView
                  style="@style/sheet_text_left"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/deaths_today" />

              <TextView
                  android:id="@+id/textViewDeathsToday"
                  style="@style/sheet_text_right"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="TextView"
                  android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                style="@style/sheet_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

              <TextView
                  style="@style/sheet_text_left"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/recovered" />

              <TextView
                  android:id="@+id/textViewRecovered"
                  style="@style/sheet_text_right"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="TextView"
                  android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                style="@style/sheet_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

              <TextView
                  style="@style/sheet_text_left"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/active_cases" />

              <TextView
                  android:id="@+id/textViewActiveCases"
                  style="@style/sheet_text_right"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="TextView"
                  android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                style="@style/sheet_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

              <TextView
                  style="@style/sheet_text_left"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/critical_cases" />

              <TextView
                  android:id="@+id/textViewCriticalCases"
                  style="@style/sheet_text_right"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="TextView"
                  android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                style="@style/sheet_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

              <TextView
                  style="@style/sheet_text_left"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/cases_per_million" />

              <TextView
                  android:id="@+id/textViewCasesPerMillion"
                  style="@style/sheet_text_right"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="TextView"
                  android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                style="@style/sheet_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

              <TextView
                  style="@style/sheet_text_left"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/deaths_per_million" />

              <TextView
                  android:id="@+id/textViewDeathsPerMillion"
                  style="@style/sheet_text_right"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="TextView"
                  android:textAlignment="textEnd" />
            </LinearLayout>
          </LinearLayout>
        </androidx.core.widget.NestedScrollView>
      </LinearLayout>

    </androidx.cardview.widget.CardView>

  </androidx.coordinatorlayout.widget.CoordinatorLayout>

  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@null"
      android:elevation="14dp"
      android:indeterminate="true"
      android:progressTint="@color/colorPrimary"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>