<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.1" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.9" />

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/guideline10"
      app:layout_constraintStart_toStartOf="@+id/guideline9"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="18dp"
        android:divider="@drawable/divider_linear_layout"
        android:dividerPadding="5dp"
        android:orientation="horizontal"
        android:showDividers="middle">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:layout_weight="1"
          android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <TextView
              style="@style/sheet_text_left"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/cases" />

          <TextView
              android:id="@+id/textViewCases"
              style="@style/sheet_text_right"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <TextView
              style="@style/sheet_text_left"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/cases_percentage" />

          <TextView
              android:id="@+id/textViewCasesPercentage"
              style="@style/sheet_text_right"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:textAlignment="textEnd" />
        </LinearLayout>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_weight="1"
          android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <TextView
              style="@style/sheet_text_left"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/deaths" />

          <TextView
              android:id="@+id/textViewDeaths"
              style="@style/sheet_text_right"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:textAlignment="textEnd"
              android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <TextView
              style="@style/sheet_text_left"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/deaths_percentage" />

          <TextView
              android:id="@+id/textViewDeathsPercentage"
              style="@style/sheet_text_right"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:textAlignment="textEnd"
              android:textColor="@color/colorPrimary" />
        </LinearLayout>
      </LinearLayout>

    </LinearLayout>

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
