<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:cardCornerRadius="15dp"
      app:cardElevation="10dp"
      app:layout_constraintBottom_toTopOf="@+id/guideline7"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      app:layout_constraintTop_toTopOf="@+id/guideline4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/textView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="16dp"
          android:fontFamily="@font/roboto_bold"
          android:text="Data History"
          android:textAlignment="center"
          android:textColor="@color/colorAccent"
          android:textSize="30sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="8dp"
          android:gravity="center"
          android:text="@string/country_field_history"
          android:textAlignment="center"
          android:textColor="@color/colorAccent"
          android:textSize="18sp"
          app:layout_constraintBottom_toTopOf="@+id/autoCompleteTextView"
          app:layout_constraintEnd_toEndOf="@+id/textView"
          app:layout_constraintStart_toStartOf="@+id/textView"
          app:layout_constraintTop_toBottomOf="@+id/textView" />

      <AutoCompleteTextView
          android:id="@+id/autoCompleteTextView"
          android:layout_width="0dp"
          android:layout_height="46dp"
          android:layout_marginBottom="32dp"
          android:background="@drawable/inputbackground"
          android:hint="@string/start_typing_here"
          android:inputType="text"
          android:padding="15dp"
          android:textColor="#FFFFFF"
          android:textColorHint="#ffffff"
          android:textCursorDrawable="@null"
          android:textSize="14sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="@+id/textView2"
          app:layout_constraintStart_toStartOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.9" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.1" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.15" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.55" />

  <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:id="@+id/coordinatorLayoutSheet"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="-16dp"
      android:elevation="11dp"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="11dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginBottom="6dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sheet_pull" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

          <com.google.android.material.tabs.TabItem
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/charts" />

          <com.google.android.material.tabs.TabItem
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/list" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

  </androidx.coordinatorlayout.widget.CoordinatorLayout>

  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:background="@null"
      android:elevation="14dp"
      android:indeterminate="true"
      android:progressTint="@color/colorPrimary"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>